# fraud-detection

./: .gitignore  CMakeLists.txt  README.md  setup.py
python/: mem.py  model.py  requirements.txt
src/: data_load.cxx  main.cpp
